--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             if (keystorePropertiesFile.exists()) {
                 signingConfig signingConfigs.release
@@ -114,7 +115,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-graphics"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.compose.material3:material3"
-    implementation "androidx.compose.material:material-icons-extended"
+    implementation "androidx.compose.material:material-icons-core"
     implementation "androidx.activity:activity-compose:1.9.2"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:${versions.lifecycle}"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:${versions.lifecycle}"
@@ -134,8 +135,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}"
     implementation "androidx.lifecycle:lifecycle-common-java8:${versions.lifecycle}"
-    implementation "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
-    implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
     implementation "androidx.room:room-runtime:${versions.room}"
     implementation "androidx.room:room-ktx:${versions.room}"
     kapt "androidx.room:room-compiler:${versions.room}"
@@ -146,7 +145,6 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:${versions.coroutines}"
 
     // Dagger
     implementation "com.google.dagger:hilt-android:${versions.hilt}"
@@ -167,7 +165,6 @@ dependencies {
     implementation "com.android.billingclient:billing-ktx:${versions.billing}"
     // Aztec editor - commented out due to dependency resolution issues
     // implementation "com.github.wordpress-mobile.WordPress-Aztec-Android:aztec:${versions.aztec}"
-    implementation "uk.co.samuelwall:material-tap-target-prompt:${versions.material_tap}"
 
     testImplementation "junit:junit:$versions.junit"
     testImplementation "org.mockito:mockito-core:$versions.mockito"
