--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.5.2"
+        classpath "com.android.tools.build:gradle:8.7.3"  // Latest AGP
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "com.google.devtools.ksp:symbol-processing-gradle-plugin:${versions.ksp}"  // KSP plugin
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.navigation}"
         classpath "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
         classpath 'com.google.gms:google-services:4.4.2'
